<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.screens.reports.report_frequentation.ReportStatisticActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="0"
            android:orientation="horizontal"
            android:paddingTop="16dp">


            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true">

                <ImageView
                    android:id="@+id/iv_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:paddingRight="16dp"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    app:srcCompat="@drawable/ic_left_line_24dp" />
            </FrameLayout>

            <TextView

                android:id="@+id/tv_screen_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/title_filters"
                android:textColor="@color/colorWhite"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tv_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="right"
                android:text="@string/title_apply"
                android:textColor="@drawable/text_view_selector"
                android:visibility="invisible" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPlaceDetailsScreen"
            android:orientation="vertical"
            tools:context=".ui.screens.left_menu.city.CityFragment">


            <TextView


                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="16dp"
                android:text="@string/title_frequentation"
                android:textColor="@color/colorWhite"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="16dp"
                android:text="@string/FREQUENTATION_DESCRIPTION"
                android:textColor="@color/colorTextWhiteGrey"
                android:textSize="13sp" />

            <com.example.dmitro.game.MainView
                android:id="@+id/test_view"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/not_busy"
                    android:textColor="@color/colorWhite"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/quite_busy"
                    android:textColor="@color/colorWhite"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/very_busy"
                    android:textColor="@color/colorWhite"
                    android:textSize="11sp" />
            </LinearLayout>
            <TextView
                android:id="@+id/tv_progress"
                android:textColor="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0%"
                android:gravity="center"
                />

            <SeekBar

                android:id="@+id/test_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:padding="8dp"
                android:paddingBottom="56dp"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_send"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="0"
                    android:background="@drawable/button_filter_selector"
                    android:gravity="center"
                    android:text="@string/send_update"
                    android:textColor="@color/white"
                    android:textSize="16dp" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


    <include
        android:id="@+id/pb_map"
        layout="@layout/loader"
        android:layout_width="138dp"
        android:layout_height="138dp"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>